--- a/app.json
+++ b/app.json
@@ -6,18 +6,33 @@
   "brandColor": "#1D1543",
   "sdk": 3,
   "platforms": [
-    "local",
-    "cloud"
+    "local"
   ],
   "name": {
-    "en": "Chargee Sparky"
+    "en": "Sparky P1 Meter",
+    "nl": "Sparky slimme P1 Meter"
   },
   "description": {
-    "en": "Adds support for Sparky P1 device."
+    "en": "Adds support for Sparky P1 device.",
+    "nl": "Lees realtime P1 berichten van je slimme meter."
   },
   "category": [
     "energy"
   ],
+  "tags": {
+    "en": [
+      "smart energy",
+      "smart meter",
+      "P1",
+      "realtime"
+    ],
+    "nl": [
+      "slimme energie",
+      "slimme meter",
+      "P1",
+      "realtime"
+    ]
+  },
   "permissions": [],
   "images": {
     "small": "/assets/images/small.png",
@@ -38,7 +53,9 @@
         "meter_power",
         "meter_gas",
         "measure_power",
-        "measure_voltage",
+        "measure_voltage.L1",
+        "measure_voltage.L2",
+        "measure_voltage.L3",
         "measure_current.L1",
         "measure_current.L2",
         "measure_current.L3"
@@ -49,35 +66,55 @@
       "capabilitiesOptions": {
         "meter_power": {
           "title": {
-            "en": "Consumption since midnight"
+            "en": "Meter reading kWh"
+          }
+        },
+        "measure_power": {
+          "title": {
+            "en": "Power in W"
           }
         },
         "meter_gas": {
           "title": {
-            "en": "Gas consumption since midnight"
+            "en": "Gas in m3"
           }
         },
         "measure_current.L1": {
           "title": {
-            "en": "Current phase 1"
+            "en": "Current L1"
           }
         },
         "measure_current.L2": {
           "title": {
-            "en": "Current phase 2"
+            "en": "Current L2"
           }
         },
         "measure_current.L3": {
           "title": {
-            "en": "Current phase 3"
+            "en": "Current L3"
+          }
+        },
+        "measure_voltage.L1": {
+          "title": {
+            "en": "Voltage L3"
+          }
+        },
+        "measure_voltage.L2": {
+          "title": {
+            "en": "Voltage L3"
+          }
+        },
+        "measure_voltage.L3": {
+          "title": {
+            "en": "Voltage L3"
           }
         }
       },
       "platforms": [
-        "cloud"
+        "local"
       ],
       "connectivity": [
-        "cloud"
+        "lan"
       ],
       "images": {
         "small": "/drivers/sparky/assets/images/small.png",
@@ -85,18 +122,7 @@
       },
       "pair": [
         {
-          "id": "list_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_devices"
-          },
-          "options": {
-            "singular": true
-          }
-        },
-        {
-          "id": "add_devices",
-          "template": "add_devices"
+          "id": "start"
         }
       ],
       "id": "sparky",
