--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tsconfig/node16": "^16.1.3",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
     "@types/node": "^20.12.7",
+    "@types/node-fetch": "^2.6.12",
     "eslint": "^7.32.0",
     "eslint-config-athom": "^3.1.3",
     "typescript": "^5.4.5"
