--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.chargee.sparky",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "compatibility": ">=5.0.0",
   "brandColor": "#1D1543",
   "sdk": 3,
@@ -66,7 +66,7 @@
       "capabilitiesOptions": {
         "meter_power": {
           "title": {
-            "en": "Meter reading kWh"
+            "en": "Total Electric consumption"
           }
         },
         "measure_power": {
@@ -76,7 +76,7 @@
         },
         "meter_gas": {
           "title": {
-            "en": "Gas in m3"
+            "en": "Total Gas consumption"
           }
         },
         "measure_current.L1": {
@@ -96,12 +96,12 @@
         },
         "measure_voltage.L1": {
           "title": {
-            "en": "Voltage L3"
+            "en": "Voltage L1"
           }
         },
         "measure_voltage.L2": {
           "title": {
-            "en": "Voltage L3"
+            "en": "Voltage L2"
           }
         },
         "measure_voltage.L3": {
