--- a/drivers/sparky/driver.settings.compose.json
+++ b/drivers/sparky/driver.settings.compose.json
@@ -2,15 +2,15 @@
   {
     "id": "label",
     "type": "label",
-    "label": { "en": "IP address" },
-    "value": "192.168.0.10",
-    "hint": { "en": "The IP address of the device." }
+    "label": { "en": "Name of your Sparky", "nl": "Naam van je Sparky"},
+    "value": "",
+    "hint": { "en": "Name of your device.", "nl": "De naam van het apparaat." }
   },
   {
     "id": "ip_address",
     "type": "text",
-    "label": { "en": "IP address" },
+    "label": { "en": "IP Address", "nl": "IP-adres" },
     "value": "",
-    "hint": { "en": "Fill in the IP address of your Sparky" }
+    "hint": { "en": "Fill in the IP address of your Sparky", "nl": "Vul het IP-adres van je Sparky in" }
   }
 ]
