--- a/app.json
+++ b/app.json
@@ -1,8 +1,15 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.chargee.sparky",
+  "homeyCommunityTopicId": 121732,
+  "homepage": "https://chargee.energy",
+  "support": "mailto:support@chargee.energy",
+  "source": "https://github.com/chargee-energy/sparky-homey",
+  "bugs": {
+    "url": "https://github.com/chargee-energy/sparky-homey/issues"
+  },
   "version": "1.0.4",
-  "compatibility": ">=12.1.0",
+  "compatibility": ">=5.0.0",
   "brandColor": "#1D1543",
   "sdk": 3,
   "platforms": [
@@ -46,7 +53,8 @@
   "drivers": [
     {
       "name": {
-        "en": "Sparky"
+        "en": "Sparky",
+        "nl": "Sparky"
       },
       "class": "sensor",
       "capabilities": [
@@ -58,55 +66,90 @@
         "measure_voltage.L3",
         "measure_current.L1",
         "measure_current.L2",
-        "measure_current.L3"
+        "measure_current.L3",
+        "meter_power.imported",
+        "meter_power.exported"
       ],
       "energy": {
-        "cumulative": true
+        "cumulative": true,
+        "cumulativeImportedCapability": "meter_power.imported",
+        "cumulativeExportedCapability": "meter_power.exported"
       },
       "capabilitiesOptions": {
         "meter_power": {
           "title": {
-            "en": "Total Electric consumption"
+            "en": "Total consumption",
+            "nl": "Totale elektriciteitsverbruik",
+            "unit": "kWh"
           }
         },
         "measure_power": {
           "title": {
-            "en": "Power in W"
+            "en": "Power",
+            "nl": "Vermogen",
+            "unit": "W"
           }
         },
         "meter_gas": {
           "title": {
-            "en": "Total Gas consumption"
+            "en": "Total Gas consumption",
+            "nl": "Totale gasverbruik",
+            "unit": "m³"
           }
         },
         "measure_current.L1": {
           "title": {
-            "en": "Current L1"
+            "en": "Current L1",
+            "nl": "Stroomsterkte fase 1",
+            "unit": "A"
           }
         },
         "measure_current.L2": {
           "title": {
-            "en": "Current L2"
+            "en": "Current L2",
+            "nl": "Stroomsterkte fase ",
+            "unit": "A"
           }
         },
         "measure_current.L3": {
           "title": {
-            "en": "Current L3"
+            "en": "Current L3",
+            "nl": "Stroomsterkte fase 3"
           }
         },
         "measure_voltage.L1": {
           "title": {
-            "en": "Voltage L1"
+            "en": "Voltage L1",
+            "nl": "Spanning fase 1",
+            "unit": "V"
           }
         },
         "measure_voltage.L2": {
           "title": {
-            "en": "Voltage L2"
+            "en": "Voltage L2",
+            "nl": "Spanning fase 2",
+            "unit": "V"
           }
         },
         "measure_voltage.L3": {
           "title": {
-            "en": "Voltage L3"
+            "en": "Voltage L3",
+            "nl": "Spanning fase 3",
+            "unit": "V"
+          }
+        },
+        "meter_power.imported": {
+          "title": {
+            "en": "Imported Energy",
+            "nl": "Geleverde energie",
+            "unit": "kWh"
+          }
+        },
+        "meter_power.exported": {
+          "title": {
+            "en": "Exported Energy",
+            "nl": "Teruggeleverde energie",
+            "unit": "kWh"
           }
         }
       },
@@ -155,33 +198,5 @@
         }
       ]
     }
-  ],
-  "widgets": {
-    "chargee-energy": {
-      "name": {
-        "en": "Chargee Energy"
-      },
-      "height": 188,
-      "settings": [],
-      "api": {
-        "getSomething": {
-          "method": "GET",
-          "path": "/"
-        },
-        "addSomething": {
-          "method": "POST",
-          "path": "/"
-        },
-        "updateSomething": {
-          "method": "PUT",
-          "path": "/:id"
-        },
-        "deleteSomething": {
-          "method": "DELETE",
-          "path": "/:id"
-        }
-      },
-      "id": "chargee-energy"
-    }
-  }
+  ]
 }
