--- a/app.json
+++ b/app.json
@@ -165,6 +165,9 @@
       },
       "pair": [
         {
+          "id": "intro"
+        },
+        {
           "id": "start"
         }
       ],
